fix: errors generales

--- a/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
+++ b/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
@@ -1,4 +1,4 @@
-<div class="relative flex items-center ">
+<div class="relative flex items-center text-sm ">
   @if (isInput()) {
   <input
     [type]="type()"
