--- a/src/app/features/ia-agent/components/message-box/message-box.html
+++ b/src/app/features/ia-agent/components/message-box/message-box.html
@@ -5,27 +5,29 @@
       'bg-white text-[#9810fa]': msg()?.sender === 'user',
       'bg-[#9810fa] text-white': msg()?.sender === 'bot'
     }"
-    class="h-6 w-6 rounded-full flex items-center justify-center text-xs font-bold"
+    class="h-6 w-6 rounded-full flex items-center justify-center text-xs font-bold mb-1"
   >
-    {{ msg()?.sender === "user" ? "T" : "A" }}
+    {{ msg()?.sender === "user" ? "T" : "I" }}
   </div>
   <span class="font-medium text-sm">
-    {{ msg()?.sender === "user" ? "Tú" : "Asistente" }}
+    {{ msg()?.sender === "user" ? "Tú" : "Asistente Ingrid" }}
   </span>
 </div>
 <!-- content -->
-<div class="text-sm space-y-2">
+<div class="text-sm ">
   @for (part of parts; track $index) {
 
   <!-- normal text -->
   @if (part.type === 'text') {
-
   <div [innerHTML]="formatMessage(part.content)"></div>
   }
   <!-- code -->
   @if (part.type === 'code') {
-  <pre class="rounded-md bg-[#1e1e1e] p-3 overflow-x-auto">
-        <code [attr.class]="part.lang" [highlight]="part.content" [language]="part.lang ? part.lang : 'plaintext'"></code>
+    <!-- code -->
+    <div class="relative rounded-lg overflow-x-auto max-w-full">
+      <pre>
+        <code class="font-mono whitespace-pre-wrap rounded-sm" [highlight]="part.content" [language]="'typescript'"></code>
       </pre>
+    </div>
   } }
 </div>
