fix: errors and bugs in messages, conversations...etc refactorize with observables for upgrade the async of application!

--- a/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
+++ b/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
@@ -1,13 +1,14 @@
-<div class="relative flex items-center text-sm ">
+<div class="relative flex items-center text-sm">
   @if (isInput()) {
   <input
     [type]="type()"
     [placeholder]="placeholder()"
-    class="p-2 w-full text-left rounded-lg border-b-1 border-[#282c34] cursor-text transition text-white placeholder:px-6"
+    class="p-2 pl-8 w-full text-left rounded-lg border-b-1 border-[#282c34] cursor-text transition text-white "
   />
   } @else {
   <button
     class="p-2 w-full text-left cursor-pointer rounded-lg hover:bg-[#282c34] transition text-white"
+    (click)="openNewChat()"
   >
   <span class="px-6">
       {{ text() }}
