--- a/src/app/features/snippets/components/filters/filters.html
+++ b/src/app/features/snippets/components/filters/filters.html
@@ -24,7 +24,7 @@
     </svg>
   </div>
 
-  <div class="flex gap-4">
+  <div class="flex gap-4 w-full flex-wrap">
     @for (item of filtersList; track item.id) {
     <app-bubble-framework
       [title]="item.name"
