--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
-<main class="grid min-h-screen grid-rows-[auto_1fr_auto]">
+<main class="grid min-h-screen grid-rows-[auto_1fr_auto] ">
   @if (!isLoginRoute) {
   <app-header></app-header>
   }
   
-  <div [class]="isLoginRoute ? 'm-0' : 'm-6'">
+  <div [class]="isLoginRoute ? 'p-0' : 'p-4'">
     <router-outlet />
   </div>
   @if (!isLoginRoute) {
