--- a/src/app/features/ia-agent/ia-agent.html
+++ b/src/app/features/ia-agent/ia-agent.html
@@ -1,31 +1,61 @@
-<section class="flex max-h-screen mx-auto">
+<section class="flex max-h-[100dvh] mx-auto">
   <!-- Sidebar -->
   <div
-    class="bg-[#18181b] p-4 w-60 border border-[#282c34] shadow-lg overflow-y-auto"
+    [ngClass]="{
+      'translate-x-0': !isOpenSidebar,
+      '-translate-x-full': isOpenSidebar
+    }"
+    class="fixed h-screen md:relative md:translate-x-0 bg-[#18181b] p-4 w-60 border border-[#282c34] shadow-lg transition-transform
+     duration-300 ease-in-out z-50 overflow-y-auto"
   >
-    <button
-      type="button"
-      class="p-2 hover:bg-[#282c34] transition rounded-full cursor-pointer"
-      (click)="goBack()"
-    >
-      <svg
-        class="w-6 h-6 text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        fill="none"
-        viewBox="0 0 24 24"
+    <div class="flex justify-between items-center">
+      <button
+        type="button"
+        class="p-2 hover:bg-[#282c34] transition rounded-full cursor-pointer"
+        (click)="goBack()"
       >
-        <path
+        <svg
+          class="w-6 h-6 text-white"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M5 12h14M5 12l4-4m-4 4 4 4"
+          />
+        </svg>
+      </button>
+
+      <!-- close sidebar -->
+      @if(!isOpenSidebar) {
+      <button
+        (click)="toggleSidebar()"
+        class="flex items-center space-x-2 text-white justify-between cursor-pointer md:hidden"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
           stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M5 12h14M5 12l4-4m-4 4 4 4"
-        />
-      </svg>
-    </button>
+          class="size-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5 8.25 12l7.5-7.5"
+          />
+        </svg>
+      </button>
+      }
+    </div>
 
     <div class="flex flex-col space-y-2 mb-6">
       <!-- header -->
@@ -72,21 +102,19 @@
           </svg>
         </button>
 
-        @if (clickedHistory) {
-          @if (conversations$ | async; as conversations) {
-            <div class="overflow-y-auto flex flex-col space-y-2 mt-1">
-              @for (conv of conversations | reverse; track conv.id) {
-                <app-conversation-box
-                  [conv]="conv"
-                  (idConversation)="loadMessagesInConversation($event)"
-                  [isActive]="conv.id === (currentConversationId$ | async)"
-                ></app-conversation-box>
-              }
-            </div>
-          } @else {
-            <p class="text-gray-400 text-sm">No hay conversaciones</p>
+        @if (clickedHistory) { @if (conversations$ | async; as conversations) {
+        <div class="overflow-y-auto flex flex-col space-y-2 mt-1">
+          @for (conv of conversations | reverse; track conv.id) {
+          <app-conversation-box
+            [conv]="conv"
+            (idConversation)="loadMessagesInConversation($event)"
+            [isActive]="conv.id === (currentConversationId$ | async)"
+          ></app-conversation-box>
           }
-        }
+        </div>
+        } @else {
+        <p class="text-gray-400 text-sm">No hay conversaciones</p>
+        } }
       </div>
     </div>
   </div>
@@ -96,11 +124,32 @@
     class="flex-1 flex flex-col h-screen bg-[#18181b] p-6 border border-[#282c34] shadow-lg"
   >
     <!-- header -->
-    <div class="pb-4 border-b border-[#282c34] mb-4">
-      <h1 class="text-2xl font-bold text-white">
+    <div class="pb-4 border-b border-[#282c34] mb-4 flex gap-4">
+      <!-- open sidebar -->
+      @if(isOpenSidebar) {
+      <button
+        (click)="toggleSidebar()"
+        class="flex items-center space-x-2 text-white justify-between cursor-pointer md:hidden"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-5"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"
+          />
+        </svg>
+      </button>
+      }
+      <h1 class="hidden md:block text-2xl font-bold text-white">
         Bienvenido a la IA de FastSnippets
       </h1>
-      <p class="text-gray-400">Estoy aquí para ayudarte</p>
     </div>
 
     <!-- list of messages-->
