--- a/src/app/shared/components/button-avatar-header/button-avatar-header.html
+++ b/src/app/shared/components/button-avatar-header/button-avatar-header.html
@@ -2,7 +2,9 @@
   <div class="relative">
     <button
       type="button"
-      class="w-11 h-11 rounded-full border-2 border-transparent hover:border-purple-600 transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-600 cursor-pointer"
+      class="w-11 h-11 rounded-full border-2 border-transparent hover:border-purple-600 transition-all
+       duration-200  cursor-pointer"
+       [ngClass]="{'focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-600' : openMenu}"
       (click)="openMenuHandler()"
       aria-label="Abrir menú de usuario"
     >
