--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -1,3 +1,3 @@
-<div class="flex flex-col items-center justify-center h-screen">
-  <app-steps-form></app-steps-form>
-</div>
+<section class="mt-28 max-w-4xl flex justify-center mx-auto">
+    <app-steps-form></app-steps-form>
+</section>
