--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -1,3 +1,7 @@
-<section class="mt-28 max-w-4xl flex justify-center mx-auto">
+<section
+  class="mt-28 max-w-4xl flex mx-auto justify-center border-1 border-gray-600 rounded-lg"
+>
+  <div>
     <app-steps-form></app-steps-form>
+  </div>
 </section>
