--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -1,7 +1,8 @@
 <section
-  class="mt-28 max-w-4xl flex mx-auto justify-center border-1 border-gray-600 rounded-lg"
+  class="mt-28 h-full grid grid-cols-1 place-items-center "
 >
-  <div>
+  <div class="p-4 border-1 border-gray-600 rounded-lg">
     <app-steps-form></app-steps-form>
+    <app-form-creation></app-form-creation>
   </div>
 </section>
