--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -1,1 +1,54 @@
-<p>form-creation works!</p>
+<section class="relative p-4">
+    <form [formGroup]="form" (ngSubmit)="submit()">
+        <div class="flex flex-col gap-4">
+            <!-- title Input -->
+            <div class="flex flex-col gap-2">
+                <label for="" class="text-white font-bold text-lg">Título</label>
+                <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:gap-4 md:items-center">
+                    <input type="text" alt="title" formControlName="title" placeholder="Formulario Reactivo..."
+                        class="p-2 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500" />
+
+                    <!-- option framework -->
+                    <app-option-framework (frameworkSelected)="recoveryframework($event)"></app-option-framework>
+                </div>
+            </div>
+            <!-- button for add code -->
+            <div class="flex flex-col gap-2">
+                <label for="" class="text-white font-bold text-lg">Código</label>
+                <button (click)="handleModal()"
+                    class="py-2 px-4 border-1 border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white">
+                    <span>Incluir Código</span>
+                </button>
+                @if (hasCodes()) {
+                <span class="text-md font-bold text-white">Codigos incluidos:</span>
+                <div class="flex justify-between border-1 border-gray-300 rounded-lg p-2">
+                    @for (code of codes.controls; track $index) {
+                    <span class="text-gray-300 text-sm">{{code.get('code')?.value.substring(0, 25) || 'Código
+                        vacío'}}</span>
+                    <button (click)="removeCode($index)" class="cursor-pointer">
+                        <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                        <svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0" aria-hidden="true">
+                            <circle cx="20" cy="20" r="18"
+                                class="fill-none stroke-white [stroke-dasharray:113] [stroke-dashoffset:113] transition-[stroke-dashoffset,opacity] duration-200 ease-out opacity-0 group-hover:[stroke-dashoffset:0] group-hover:opacity-100 transform -rotate-90 origin-center"
+                                stroke-width="2" />
+                        </svg>
+                    </button>
+                    }
+                </div>
+                }
+            </div>
+            <div class="flex">
+                <button type="submit"
+                    class="py-2 px-4 border-1 border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white">
+                    Crear
+                </button>
+            </div>
+        </div>
+    </form>
+    @if (isOpenModal) {
+    <app-modal-paste-code (closeModal)="closeModal()" (pasteCode)="addCode($event)"></app-modal-paste-code>
+    }
+</section>
