--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -2,7 +2,7 @@
   class="mt-28 h-full grid grid-cols-1 place-items-center "
 >
   <div class="p-4 border-1 border-gray-600 rounded-lg">
-    <app-steps-form></app-steps-form>
-    <app-form-creation></app-form-creation>
+    <app-steps-form [stepActive]="activeStep"></app-steps-form>
+    <app-form-creation (activeStep)="activeStep = $event"></app-form-creation>
   </div>
 </section>
