feat: add SnippetData interface and refactor form creation components

--- a/src/app/features/create-snippet/components/option-framework/option-framework.html
+++ b/src/app/features/create-snippet/components/option-framework/option-framework.html
@@ -5,7 +5,7 @@
     (click)="selectFramework(fw.name)"
     class="hover:scale-105 transition-all duration-200 cursor-pointer "
        >
-        <img [src]="fw.route" [alt]="fw.name" class=" w-9 h-9 border-1 p-1 border-gray-300 rounded-full"
+        <img [src]="fw.route" [alt]="fw.name" class=" w-10 h-10 border-1 p-1 border-gray-300 rounded-full drop-shadow-md drop-shadow-gray-700"
          [ngClass]="{'bg-purple-600': fw.name === activeFramework}">
     </button>
     }
