--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -3,6 +3,6 @@
 >
   <div class="p-4 border-1 border-gray-600 rounded-lg">
     <app-steps-form [stepActive]="activeStep"></app-steps-form>
-    <app-form-creation (activeStep)="activeStep = $event"></app-form-creation>
+    <app-form-creation (activeStep)="activeStep"></app-form-creation>
   </div>
 </section>
