--- a/src/app/features/create-snippet/components/steps-form/steps-form.html
+++ b/src/app/features/create-snippet/components/steps-form/steps-form.html
@@ -1,13 +1,20 @@
-<div class="flex w-full rounded-full border-1 border-gray-600">
+<div class="flex w-full rounded-full border-1 border-gray-600 text-lg">
   @for (step of steps; track step.number) {
   <div
-    class="rounded-full px-4 py-2 border-r-1 text-white transition-colors duration-300"
+    class="z-10 relative rounded-full w-full px-4 py-2 border-r-1 text-white transition-colors duration-300"
     [ngClass]="{
-      ' border border-purple-600': step.number === stepActive,
+      ' bg-purple-600 border border-purple-600 font-bold':
+        step.number === stepActive,
       'border-white': step.number !== stepActive
     }"
   >
     {{ step.label }}
+
+    @if (step.number === stepActive) {
+    <div
+      class="z-0 absolute inset-0 bg-white opacity-40 blur-lg rounded-full "
+    ></div>
+    }
   </div>
   }
 </div>
