--- a/src/app/features/create-snippet/components/option-framework/option-framework.html
+++ b/src/app/features/create-snippet/components/option-framework/option-framework.html
@@ -1,11 +1,11 @@
-<div class="flex gap-2">
-    @for (fw of frameworksOptions; track $index) {
+<div class="flex gap-4">
+    @for (fw of frameworksOptions; track fw.name) {
     <button 
     type="button"
     (click)="selectFramework(fw.name)"
     class="hover:scale-105 transition-all duration-200 cursor-pointer "
        >
-        <img [src]="fw.route" [alt]="fw.name" class=" w-10 h-10 border-1 p-1 border-gray-300 rounded-full drop-shadow-md drop-shadow-gray-700"
+        <img [src]="fw.route" [alt]="fw.name" class=" w-11 h-11 border-1 p-1 border-gray-300 rounded-full drop-shadow-md drop-shadow-gray-700"
          [ngClass]="{'border-purple-600 shadow-lg shadow-purple-600 transition-all duration-200': fw.name === activeFramework}">
     </button>
     }
