--- a/src/app/features/create-snippet/create-snippet.html
+++ b/src/app/features/create-snippet/create-snippet.html
@@ -1,8 +1,13 @@
 <section
-  class="mt-28 min-h-[85vh] grid grid-cols-1 place-items-center"
+  class="mt-28 min-h-[85vh] grid  place-items-center"
 >
   <div class="p-4 border-1 border-gray-300 shadow-xl shadow-purple-600 rounded-lg flex flex-col gap-4">
-    <app-steps-form [stepActive]="activeStep"></app-steps-form>
-    <app-form-creation ></app-form-creation>
+    <div class="z-0">
+
+      <app-steps-form [stepActive]="activeStep"></app-steps-form>
+    </div>
+    <div class="z-10">
+      <app-form-creation (currentStepChange)="activeStep = $event"></app-form-creation>
+    </div>
   </div>
 </section>
