--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -1,18 +1,91 @@
-<section class="relative">
-    <!-- steps form -->
-    @if (activeStep === 1) {
-      <!-- step 1 content here -->
-      <app-step-data
-        [form]="form"
-        (activeStep)="(activeStep)"
-        (addCodeChange)="addCode($event)"
-        [codes]="codes"
-        (nextStep)="nextStep()"
-      >
-      </app-step-data>
-    } @else if (activeStep === 2) {
-      <!-- step 2 content here -->
-    } @else {
-      <!-- step 3 content here -->
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <div class="flex flex-col gap-4">
+    @if (currentStep === 1) {
+      <!-- title Input -->
+      <div class="flex flex-col gap-2">
+        <label for="" class="text-white font-bold text-lg">Título</label>
+        <div
+          class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:gap-4 md:items-center"
+        >
+          <!-- input title -->
+          <input
+            type="text"
+            alt="title"
+            formControlName="title"
+            placeholder="Formulario Reactivo..."
+            class="py-2 px-4 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500 shadow-sm shadow-purple-600 focus:shadow-lg transition-all duration-200"
+          />
+
+          <!-- option framework -->
+          <app-option-framework
+            (frameworkSelected)="recoveryframework($event)"
+          ></app-option-framework>
+        </div>
+
+        @if (
+          this.form.get("title")?.hasError("required") &&
+          this.form.get("title")?.touched
+        ) {
+          <span class="text-red-500 text-xs"> El título es obligatorio </span>
+        } @else if (
+          this.form.get("title")?.hasError("minlength") &&
+          this.form.get("title")?.touched
+        ) {
+          <span class="text-red-500 text-xs">
+            El título debe tener al menos 3 caracteres
+          </span>
+        }
+      </div>
+    } @else if (currentStep === 2) {
+      <!-- button for add code -->
+      <div class="flex flex-col gap-2">
+        <label
+          for=""
+          class="text-white font-bold text-lg drop-shadow-purple-600"
+          >Código</label
+        >
+        <!-- textarea -->
+        <textarea
+          name="codes"
+          placeholder="Pega tu código aquí!"
+          [value]="codeInput"
+          cols="100"
+          rows="10"
+          class="w-full text-white bg-[#282c34] p-4 rounded"
+        ></textarea>
+
+        <!-- button for add code -->
+        <button
+          type="button"
+          (click)="addCode(codeInput)"
+          class="border border-gray-300 text-white font-bold rounded-lg p-2 cursor-pointer shadow-lg hover:shadow-purple-600 transition-all duration-200"
+        >
+          <span>Añadir</span>
+        </button>
+        <!-- show codes added -->
+        <span class="text-md font-bold text-white drop-shadow-purple-600"
+          >Codigos incluidos:</span
+        >
+        <div class="max-h-96 overflow-y-auto flex flex-col gap-3">
+          @if (hasCodes()) {
+            @for (code of codes.controls; track $index) {
+              <app-box-code
+                [code]="code.get('code')?.value"
+                (removeCode)="removeCode($event)"
+              ></app-box-code>
+            }
+          }
+        </div>
+      </div>
     }
-</section>
+    <div class="flex">
+      <button
+      (click)="currentStep != 3 ? nextStep() : submit()"
+        type="submit"
+        class="py-2 px-4 border border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white bg-purple-600/80 hover:bg-purple-600 shadow-[0_0_15px_rgba(147,51,234,0.6)] hover:shadow-[0_0_25px_rgba(147,51,234,0.9)]"
+      >
+        Continuar
+      </button>
+    </div>
+  </div>
+</form>
