--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form [formGroup]="form" (ngSubmit)="submitForm.emit()">
   <div class="flex flex-col gap-4">
     @if (currentStep === 1) {
       <!-- title Input -->
@@ -12,29 +12,33 @@
             type="text"
             alt="title"
             formControlName="title"
-            placeholder="Formulario Reactivo..."
+            placeholder="Componente reutilizable..."
             class="py-2 px-4 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500 shadow-sm shadow-purple-600 focus:shadow-lg transition-all duration-200"
           />
 
           <!-- option framework -->
           <app-option-framework
-            (frameworkSelected)="recoveryframework($event)"
+            (frameworkSelected)="recoveryFramework($event)"
           ></app-option-framework>
         </div>
 
-        @if (
-          this.form.get("title")?.hasError("required") &&
-          this.form.get("title")?.touched
-        ) {
-          <span class="text-red-500 text-xs"> El título es obligatorio </span>
-        } @else if (
-          this.form.get("title")?.hasError("minlength") &&
-          this.form.get("title")?.touched
-        ) {
+        @if (messageError) {
           <span class="text-red-500 text-xs">
-            El título debe tener al menos 3 caracteres
+            {{ messageError }}
           </span>
         }
+
+        <!-- tags -->
+        <label for="" class="text-white font-bold text-lg">Tags</label>
+        <div class="flex flex-col gap-2">
+          <input
+            type="text"
+            alt="title"
+            formControlName="title"
+            placeholder="#form #reactive"
+            class="py-2 px-4 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500 shadow-sm shadow-purple-600 focus:shadow-lg transition-all duration-200"
+          />
+        </div>
       </div>
     } @else if (currentStep === 2) {
       <!-- button for add code -->
@@ -57,7 +61,7 @@
         <!-- button for add code -->
         <button
           type="button"
-          (click)="addCode(codeInput)"
+          (click)="addCode.emit(codeInput)"
           class="border border-gray-300 text-white font-bold rounded-lg p-2 cursor-pointer shadow-lg hover:shadow-purple-600 transition-all duration-200"
         >
           <span>Añadir</span>
@@ -71,7 +75,7 @@
             @for (code of codes.controls; track $index) {
               <app-box-code
                 [code]="code.get('code')?.value"
-                (removeCode)="removeCode($event)"
+                (removeCode)="removeCode.emit($event)"
               ></app-box-code>
             }
           }
@@ -80,8 +84,8 @@
     }
     <div class="flex">
       <button
-      (click)="currentStep != 3 ? nextStep() : submit()"
-        type="submit"
+        (click)="currentStep != 3 ? nextStep() : submitForm.emit()"
+        type="button"
         class="py-2 px-4 border border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white bg-purple-600/80 hover:bg-purple-600 shadow-[0_0_15px_rgba(147,51,234,0.6)] hover:shadow-[0_0_25px_rgba(147,51,234,0.9)]"
       >
         Continuar
