feat: enhance snippet creation flow with improved UI, validation, and new features

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,13 @@
 <main class="grid min-h-screen grid-rows-[auto_1fr_auto] ">
   @if (isReady$ | async) {
-    @if (!isLoginRoute) {
+    @if (!hideHeader) {
       <app-header></app-header>
     }
     
-    <div [class]="isLoginRoute ? 'p-0' : 'p-4'">
+    <div [class]="hideFooter ? 'p-0' : 'p-4'">
       <router-outlet />
     </div>
-    @if (!isLoginRoute) {
+    @if (!hideFooter) {
       <app-footer></app-footer>
     }
   } @else {
