--- a/src/app/features/create-snippet/components/option-framework/option-framework.html
+++ b/src/app/features/create-snippet/components/option-framework/option-framework.html
@@ -1,12 +1,27 @@
 <div class="flex gap-4">
-    @for (fw of frameworksOptions; track fw.name) {
-    <button 
-    type="button"
-    (click)="selectFramework(fw.name)"
-    class="hover:scale-105 transition-all duration-200 cursor-pointer "
-       >
-        <img [src]="fw.route" [alt]="fw.name" class=" w-11 h-11 border-1 p-1 border-gray-300 rounded-full drop-shadow-md drop-shadow-gray-700"
-         [ngClass]="{'border-purple-600 shadow-lg shadow-purple-600 transition-all duration-200': fw.name === activeFramework}">
+  @for (fw of frameworksOptions; track fw.name) {
+    <button
+      type="button"
+      (click)="selectFramework(fw.name)"
+      class="hover:scale-105 transition-all duration-200 cursor-pointer"
+    >
+      <img
+        [src]="fw.route"
+        [alt]="fw.name"
+        class="w-11 h-11 border p-1 rounded-full drop-shadow-md drop-shadow-gray-700"
+        [ngClass]="{
+          'border-angular shadow-lg shadow-angular transition-all duration-200':
+            fw.name === 'Angular' && fw.name === selectedFramework,
+          'border-react shadow-lg shadow-react transition-all duration-200':
+            fw.name === 'React' && fw.name === selectedFramework,
+          'border-vue shadow-lg shadow-vue transition-all duration-200':
+            fw.name === 'Vue' && fw.name === selectedFramework,
+          'border-svelte shadow-lg shadow-svelte transition-all duration-200':
+            fw.name === 'Svelte' && fw.name === selectedFramework,
+            'border-gray-300': fw.name !== selectedFramework,
+        }"
+      />
     </button>
-    }
+
+  }
 </div>
