--- a/src/app/features/create-snippet/form-creation/form-creation.html
+++ b/src/app/features/create-snippet/form-creation/form-creation.html
@@ -1,5 +1,9 @@
-<form [formGroup]="form" (ngSubmit)="submitForm.emit()">
-  <div class="flex flex-col gap-4">
+<form
+  [formGroup]="form"
+  (ngSubmit)="submitForm.emit()"
+  class="max-w-6xl flex flex-col gap-4"
+>
+  <div class="flex-1 max-h-[500px] overflow-y-auto pr-2">
     @if (currentStep === 1) {
       <!-- title Input -->
       <div class="flex flex-col gap-2">
@@ -18,7 +22,8 @@
 
           <!-- option framework -->
           <app-option-framework
-            (frameworkSelected)="recoveryFramework($event)"
+            [selectedFramework]="form.get('framework')?.value"
+            (frameworkSelected)="frameworkSelected.emit($event)"
           ></app-option-framework>
         </div>
 
@@ -33,13 +38,13 @@
         <div class="flex flex-col gap-2">
           <input
             type="text"
-            alt="title"
-            formControlName="title"
+            alt="tags"
             placeholder="#form #reactive"
             class="py-2 px-4 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500 shadow-sm shadow-purple-600 focus:shadow-lg transition-all duration-200"
           />
         </div>
       </div>
+      <!-- STEP 2 -->
     } @else if (currentStep === 2) {
       <!-- button for add code -->
       <div class="flex flex-col gap-2">
@@ -48,29 +53,49 @@
           class="text-white font-bold text-lg drop-shadow-purple-600"
           >Código</label
         >
-        <!-- textarea -->
+        <!-- textarea code -->
         <textarea
           name="codes"
           placeholder="Pega tu código aquí!"
           [formControl]="codeInput"
           cols="100"
-          rows="10"
-          class="w-full text-white bg-[#282c34] p-4 rounded"
+          rows="5"
+          class="w-full text-white bg-[#282c34] p-4 rounded "
         ></textarea>
-
+        <!-- input action -->
+        <div class="flex flex-col gap-2">
+          <label for="action" class="text-md text-white font-bold"
+            >¿Qué hace este fragmento de código?</label
+          >
+          <input
+            type="text"
+            alt="title"
+            minlength="3"
+            maxlength="100"
+            [formControl]="actionInput"
+            placeholder="Detecta cuando cambia un @Input en un componente hijo."
+            class="py-2 px-4 border-1 border-gray-300 rounded-md text-white placeholder:text-gray-500 shadow-sm shadow-purple-600 focus:shadow-lg transition-all duration-200"
+          />
+        </div>
+        <!-- show error -->
+        @if (messageError) {
+          <span class="text-sm text-red-500">{{ messageError }}</span>
+        }
         <!-- button for add code -->
-        <button
-          type="button"
-          (click)="handleAddCode()"
-          class="border border-gray-300 text-white font-bold rounded-lg p-2 cursor-pointer shadow-lg hover:shadow-purple-600 transition-all duration-200"
-        >
-          <span>Añadir</span>
-        </button>
+        <div class="flex">
+          <button
+            type="button"
+            (click)="handleAddCode()"
+            class="border border-gray-300 text-white font-bold rounded-lg px-4 py-2 cursor-pointer shadow-lg hover:shadow-purple-600 transition-all duration-200"
+          >
+            <span>Añadir Código</span>
+          </button>
+        </div>
         <!-- show codes added -->
         <span class="text-md font-bold text-white drop-shadow-purple-600"
-          >Codigos incluidos:</span
+          >Códigos incluidos:</span
         >
-        <div class="max-h-96 overflow-y-auto flex flex-col gap-3">
+        <div class=" max-h-32 p-1 overflow-y-auto flex flex-col gap-3">
           @if (hasCodes()) {
             @for (code of codes.controls; track $index) {
               <app-box-code
@@ -78,18 +103,83 @@
                 (removeCode)="removeCode.emit($event)"
               ></app-box-code>
             }
+          } @else {
+            <span class="text-sm text-gray-600">No has incluido códigos</span>
           }
         </div>
       </div>
     }
-    <div class="flex">
+    <!-- STEP 3 -->
+    @else if (currentStep === 3) {
+      <h1 class="text-2xl text-white font-bold">Resumen de Snippet:</h1>
+      <hr class="mt-1 border-gray-300" />
+      <!-- title -->
+      <div class="flex gap-2 mt-2">
+        <label for="title" class="text-white text-md font-semibold"
+          >Nombre del snippet:
+        </label>
+        <span class="text-white">{{ form.get("title")?.value }}</span>
+      </div>
+      <!-- framework -->
+      <div class="flex gap-2  items-center">
+        <label for="framework" class="text-white text-md font-semibold"
+          >Framework seleccionado:
+        </label>
+        <img
+          src="./{{ detectIcon(form.get('framework')?.value) }}"
+          class="w-6 h-6 lg:w-8 lg:h-8 drop-shadow-lg/60 "
+          [ngClass]="{
+            ' drop-shadow-angular': form.get('framework')?.value === 'Angular',
+            'drop-shadow-react': form.get('framework')?.value === 'React',
+            'drop-shadow-vue': form.get('framework')?.value === 'Vue',
+            'drop-shadow-svelte': form.get('framework')?.value === 'Svelte',
+          }"
+          alt="framework"
+        />
+      </div>
+
+      <div
+        class="grid grid-cols-1  gap-2"
+        [ngClass]="{
+          'md:grid-cols-2': IsMoreThan1,
+        }"
+      >
+        @for (code of codes.controls; track $index) {
+          <div class="flex flex-col">
+            <!-- action -->
+            <div class="">
+              <span class="text-sm text-[#98c379]"
+                >// {{ code.get("action")?.value }}</span
+              >
+            </div>
+            <!-- code -->
+            <code
+              class="rounded-lg whitespace-pre-wrap overflow-y-auto max-h-96 p-4 text-sm"
+              [highlight]="code.get('code')?.value || ''"
+              [language]="'typescript'"
+            ></code>
+          </div>
+        }
+      </div>
+    }
+  </div>
+  <!-- FOOTER -->
+  <div class="flex gap-2">
+    @if (currentStep != 1) {
       <button
-        (click)="currentStep != 3 ? nextStep() : submitForm.emit()"
+        (click)="prevStepChange.emit()"
         type="button"
         class="py-2 px-4 border border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white bg-purple-600/80 hover:bg-purple-600 shadow-[0_0_15px_rgba(147,51,234,0.6)] hover:shadow-[0_0_25px_rgba(147,51,234,0.9)]"
       >
-        Continuar
+        Atrás
       </button>
-    </div>
+    }
+    <button
+      (click)="currentStep != 3 ? nextStep() : submitForm.emit()"
+      type="button"
+      class="py-2 px-4 border border-gray-300 rounded-lg hover:scale-105 transition-all duration-200 cursor-pointer text-white bg-purple-600/80 hover:bg-purple-600 shadow-[0_0_15px_rgba(147,51,234,0.6)] hover:shadow-[0_0_25px_rgba(147,51,234,0.9)]"
+    >
+      {{ currentStep === 3 ? "Crear Snippet" : "Continuar" }}
+    </button>
   </div>
 </form>
